Added file receiver

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # A string flag defining which type of receiver function should be used to get the GPS data
 # One of: file, socket
 RECEIVER_FUNC=socket
+
+# A string defining the file name where the example_gps_data is stored
+EXAMPLE_GPS_DATA_FILE_NAME=example_gps_data.txt
