Moved socket configs to environment variables

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,9 @@ RECEIVER_FUNC=socket
 
 # A string defining the file name where the example_gps_data is stored
 EXAMPLE_GPS_DATA_FILE_NAME=example_gps_data.txt
+
+# The IPv4 address that the socket connection for retrieving GPS data should be hosted from
+SOCKET_HOST_IP=10.16.171.254
+
+# The port number that the socket connection for retrieving GPS data should be hosted from
+SOCKET_HOST_PORT=12345
