Added retrieving images of maps

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,22 @@ SOCKET_HOST_IP=10.16.171.254
 
 # The port number that the socket connection for retrieving GPS data should be hosted from
 SOCKET_HOST_PORT=12345
+
+# A string defining which style to use for the background map image
+# One of: osm-carto, osm-bright, osm-bright-grey, osm-bright-smooth, klokantech-basic, osm-liberty, maptiler-3d, toner, toner-grey, positron
+OSM_MAP_STYLE=osm-carto
+
+# The file extension to use for saving the background map images
+# One of: .jpg, .png, .bmp, .jpeg
+MAP_IMAGE_FILE_EXTENSION=.jpg
+
+# The secret API key for requesting background map images
+GEOAPIFY_API_KEY=**********
+
+# The time time in secs the file_receiver will wait for to pretend to function like the socket receiver
+# Must be an int or float
+PRETEND_SOCKET_WAIT_TIME=3
+
+# The minimum level required for logs to be outputted to the display
+# One of: debug, info, warning, error, critical
+LOG_LEVEL=warn
