Added walking background map image generator

--- a/.gitignore
+++ b/.gitignore
@@ -272,5 +272,6 @@ $RECYCLE.BIN/
 
 #Custom Ignores
 Background_Map_Images/*
+Walking_Background_Map_Images/*
 User_Drawings/*
 Route_GPS_Drawings/*
