--- a/.gitignore
+++ b/.gitignore
@@ -273,6 +273,6 @@ $RECYCLE.BIN/
 #Custom Ignores
 Desired_Background_Map_Images/*
 Walking_Background_Map_Images/*
-User_Drawings/*
+Image_Comparisons/User_Drawings/*
 Route_GPS_Drawings/*
 Frontend/Logo design
