fixed incorrect warning log level name

--- a/.env.example
+++ b/.env.example
@@ -28,4 +28,4 @@ PRETEND_SOCKET_WAIT_TIME=3
 
 # The minimum level required for logs to be outputted to the display
 # One of: debug, info, warning, error, critical
-LOG_LEVEL=warn
+LOG_LEVEL=warning
